SPCTR-1989: Updated Z-index and Fixed Close Icon Issue

--- a/src/blocks/image-gallery/style.scss
+++ b/src/blocks/image-gallery/style.scss
@@ -619,6 +619,7 @@
 			-moz-transition-property: opacity;
 			-o-transition-property: opacity;
 			transition-property: opacity;
+			z-index: 999999999 !important;
 
 			@include transitionSpeeds();
 
